Fixed attributes container returning wrong size, added safe toStrings for all constant types, added attrubute builders for LocalVariableTableAttribute, and LocalVariableTypeTableAttribute. Added NativeArrays for native array manipulation & creation, added NativeTypes for native type value creation, added SystemLib for System Class method & var bindings, added MathLib for Math Class method & var bindings, fixed ConstantPool & ConstantPoolUtil. added CCWriterUtil to further abstract methods to make bytecode writing simpler.